[gd_scene load_steps=22 format=2]

[ext_resource path="res://Materials/DarkGreen.tres" type="Material" id=1]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=2]
[ext_resource path="res://Assets/Particles/BloodParticle.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Hud/Marker.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Hud/EnemyInfo.tscn" type="PackedScene" id=5]

[sub_resource type="CapsuleShape" id=1]
radius = 1.25
height = 1.5

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1, 5, 1 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 1.25, 1.25, 2 )

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.298039, 0.2, 0.0117647, 1 )

[sub_resource type="CubeMesh" id=5]
material = ExtResource( 1 )
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="CubeMesh" id=6]
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="CubeMesh" id=7]
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="CubeMesh" id=8]
size = Vector3( 0.5, 1, 0.5 )

[sub_resource type="CubeMesh" id=9]
size = Vector3( 0.5, 0.5, 0.5 )

[sub_resource type="Animation" id=10]
length = 1.2
loop = true
step = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Body/LeftHip:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1, 0, 1.5 ), Vector3( -1, 0, 1 ), Vector3( -1, 0, 0.5 ), Vector3( -1, 0, 1 ), Vector3( -1, 0, 1.5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/RightHip:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 0, 0.5 ), Vector3( 1, 0, 1 ), Vector3( 1, 0, 1.5 ), Vector3( 1, 0, 1 ), Vector3( 1, 0, 0.5 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/RightShoulder:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 1, 0, -1 ), Vector3( 1, 0, -1.5 ), Vector3( 1, 0, -1 ), Vector3( 1, 0, -0.5 ), Vector3( 1, 0, -1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/LeftShoulder:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.6, 0.9, 1.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( -1, 0, -1 ), Vector3( -1, 0, -0.5 ), Vector3( -1, 0, -1 ), Vector3( -1, 0, -1.5 ), Vector3( -1, 0, -1 ) ]
}

[sub_resource type="Animation" id=11]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Body/LeftShoulder:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -1, 0, -1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Body/RightShoulder:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 0, -1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Body/LeftHip:translation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( -1, 0, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Body/RightHip:translation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 1, 0, 1 ) ]
}

[sub_resource type="AnimationNodeBlend2" id=12]

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "Run"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "Stand"

[sub_resource type="AnimationNodeBlendTree" id=15]
graph_offset = Vector2( 0, 36 )
nodes/Moving/node = SubResource( 12 )
nodes/Moving/position = Vector2( 460, 60 )
nodes/Run/node = SubResource( 13 )
nodes/Run/position = Vector2( 200, 180 )
nodes/Stand/node = SubResource( 14 )
nodes/Stand/position = Vector2( 200, 60 )
nodes/output/position = Vector2( 720, 100 )
node_connections = [ "output", 0, "Moving", "Moving", 0, "Stand", "Moving", 1, "Run" ]

[sub_resource type="BoxShape" id=16]
extents = Vector3( 10, 10, 10 )

[node name="Turtle" type="KinematicBody" groups=[
"Enemy",
]]
script = ExtResource( 2 )
drop = "Health"
title = "Turtle"

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="AttackShape" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -2 )
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="AttackShape"]
shape = SubResource( 2 )

[node name="Body" type="MeshInstance" parent="."]
mesh = SubResource( 3 )
material/0 = SubResource( 4 )

[node name="LeftShoulder" type="BoneAttachment" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, -1 )

[node name="Leg" type="MeshInstance" parent="Body/LeftShoulder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = SubResource( 5 )
material/0 = null

[node name="RightShoulder" type="BoneAttachment" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1 )

[node name="Leg" type="MeshInstance" parent="Body/RightShoulder"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = SubResource( 6 )
material/0 = ExtResource( 1 )

[node name="LeftHip" type="BoneAttachment" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 1 )

[node name="Leg" type="MeshInstance" parent="Body/LeftHip"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = SubResource( 7 )
material/0 = ExtResource( 1 )

[node name="RightHip" type="BoneAttachment" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 1 )

[node name="Leg" type="MeshInstance" parent="Body/RightHip"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
mesh = SubResource( 8 )
material/0 = ExtResource( 1 )

[node name="Neck" type="BoneAttachment" parent="Body"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1 )

[node name="Head" type="MeshInstance" parent="Body/Neck"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.25 )
mesh = SubResource( 9 )
material/0 = ExtResource( 1 )

[node name="SetRay" type="RayCast" parent="."]
enabled = true
cast_to = Vector3( 0, -1000, 0 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Run = SubResource( 10 )
anims/Stand = SubResource( 11 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/Moving/blend_amount = 0.0

[node name="DetectionArea" type="Area" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape" type="CollisionShape" parent="DetectionArea"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00148964, 0.0143025, -7.9155e-05 )
shape = SubResource( 16 )

[node name="HitParticles" parent="." instance=ExtResource( 3 )]
initial_velocity = 3.0

[node name="Info" parent="." instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )

[node name="Marker" parent="." instance=ExtResource( 4 )]
type = 2
